k8s/airgap-wallet/production/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: __CI_PROJECT_NAME__
  namespace: __NAMESPACE__
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - __CI_PROJECT_NAME__.prod.gke.papers.tech
      secretName: __CI_PROJECT_NAME__-prod-tls
  rules:
    - host: __CI_PROJECT_NAME__.prod.gke.papers.tech
      http:
        paths:
          - backend:
              serviceName: __CI_PROJECT_NAME__
              servicePort: 80
